--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,7 @@ FodyWeavers.xsd
 # Visual Studio Stuffs #
 ########################
 .vs/
+
+# ghostwriter Markdown backups #
+################################
+*.md.backup
